# PowerJudge

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  PowerJudge.depend  README.md  install.sh  java.policy  judge.properties  makefile
config/: java.policy  judged  judged.conf  logrotate
install/: judged  judged.conf  ufw
src/: db_updater.cpp  db_updater.h  judge.c  judge.cpp  judge.h  judge_core.h  judged.c  judged.cpp  judged.h  log.cpp  log.h  misc.cpp  misc.h  read_config.cpp  read_config.h  syscalls.cpp  syscalls.h  thread_safe_queue.h  thread_safe_queue.hpp
test/: client.c  unitTest.sh
test/code/1000/: 1000.c  1000.java  1000.kt  1000.pas  1000.py  1000_AC.java  1000_CE.c  1000_CE.cc  1000_CE.java  1000_CE.py  1000_I64d.cc  1000_MLE.cc  1000_MLE.java  1000_MLE.py  1000_OLE.cc  1000_OLE.py  1000_PE.cpp  1000_PE.java  1000_RE.java  1000_RE.py  1000_RE_FPE.cpp  1000_RE_SEGV.cpp  1000_RF.cc  1000_TLE.cc  1000_TLE.java  1000_WA.cc  1000_WA.cpp  1000_lld.cpp  1000_thread.java  NoPublicClass.java  NotPublicClass.java  ac_no_header.c  ce_long_error.cc  compile_timeout.c  input_data_leak.py  judge_timeout.c  mle_execve_self.c
test/code/1001/: 1001_SE.cc
test/code/1405/: 1405.cc  1405_WA.cc
test/data/1000/: data3.in
test/data/1001/: 1000.in  1000.out
test/data/1405/: 1405.in  spj  spj.cc
